# image_processor

./: CMakeLists.txt  Color.cpp  Color.h  Filters.h  Image.cpp  Image.h  InputOutput.cpp  InputOutput.h  README.md  controller.cpp  controller.h  crop_filter.cpp  crop_filter.h  grayscale_filter.cpp  grayscale_filter.h  negative_filter.cpp  negative_filter.h  test.cpp
